created MainInformation Flow:
- created MainInformation flow
- added MainInformation module
- added MainInformation storyboard

--- a/C-VIP-S_ArchitectureExample/Storyboards/MainTabBar/MainTabBar.storyboard
+++ b/C-VIP-S_ArchitectureExample/Storyboards/MainTabBar/MainTabBar.storyboard
@@ -19,41 +19,41 @@
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     </tabBar>
                     <connections>
-                        <segue destination="6Eu-cQ-DFb" kind="relationship" relationship="viewControllers" id="g6W-o8-uma"/>
-                        <segue destination="1y9-UA-KyA" kind="relationship" relationship="viewControllers" id="ZBa-6Q-2nU"/>
+                        <segue destination="EQH-3S-MFZ" kind="relationship" relationship="viewControllers" id="JzC-Ho-hHN"/>
+                        <segue destination="21h-bb-Oz2" kind="relationship" relationship="viewControllers" id="7Sm-51-SLH"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GxS-1d-KRh" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-1649" y="-1526"/>
         </scene>
-        <!--Profile-->
-        <scene sceneID="Igq-wg-Opq">
-            <objects>
-                <navigationController id="1y9-UA-KyA" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Profile" id="TXH-Pd-5hv"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="gT8-cP-LbK">
-                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
-                        <autoresizingMask key="autoresizingMask"/>
-                    </navigationBar>
-                </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="aSg-iE-le9" userLabel="First Responder" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="-393" y="-1129"/>
-        </scene>
         <!--Main Information-->
-        <scene sceneID="a63-bh-p18">
+        <scene sceneID="t7p-Td-wTb">
             <objects>
-                <navigationController id="6Eu-cQ-DFb" sceneMemberID="viewController">
-                    <tabBarItem key="tabBarItem" title="Main Information" id="xGH-rF-Yv2"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="scG-V5-GGN">
+                <navigationController id="EQH-3S-MFZ" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Main Information" id="o7d-y5-WB9"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ml3-5l-6G8">
                         <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="33O-GK-5nM" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="uR2-df-3hH" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-394" y="-1899"/>
+            <point key="canvasLocation" x="-823" y="-1779"/>
+        </scene>
+        <!--Profile-->
+        <scene sceneID="yxw-PA-vRW">
+            <objects>
+                <navigationController id="21h-bb-Oz2" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Profile" id="ZoX-g5-kET"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="5QR-dP-N7O">
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="a0e-gR-h2O" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-823" y="-1059"/>
         </scene>
     </scenes>
 </document>
