changes in architecture design and project folders organization system:
- added ModuleReference as reference type wrapper for Module protocol
- added set of active modules as mandatory property of Router protocol
- made changes in BaseRouter to follow current Router protocol requirements
- added methods to add/remove modules from active modules set
- removed Storyboards folder
- all storyboards moved to corresponding "Flow" folders

--- a/C-VIP-S_ArchitectureExample/Flows/MainInformation/MainInformation.storyboard
+++ b/C-VIP-S_ArchitectureExample/Flows/MainInformation/MainInformation.storyboard
@@ -13,7 +13,7 @@
         <!--Main Information View Controller-->
         <scene sceneID="REZ-kO-xS0">
             <objects>
-                <viewController storyboardIdentifier="MainInformationViewController" id="liz-BV-D0B" customClass="MainInformationViewController" customModule="C_VIP_S_ArchitectureExample" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController restorationIdentifier="MainInformationViewController" storyboardIdentifier="MainInformationViewController" id="liz-BV-D0B" customClass="MainInformationViewController" customModule="C_VIP_S_ArchitectureExample" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0YM-KH-xx5">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
