--- a/C-VIP-S_ArchitectureExample/Flows/Profile/Profile.storyboard
+++ b/C-VIP-S_ArchitectureExample/Flows/Profile/Profile.storyboard
@@ -13,7 +13,7 @@
         <!--Profile View Controller-->
         <scene sceneID="xtL-7i-cMz">
             <objects>
-                <viewController storyboardIdentifier="ProfileViewController" id="vRz-Z6-8ff" customClass="ProfileViewController" customModule="C_VIP_S_ArchitectureExample" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController restorationIdentifier="ProfileViewController" storyboardIdentifier="ProfileViewController" id="vRz-Z6-8ff" customClass="ProfileViewController" customModule="C_VIP_S_ArchitectureExample" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="2KC-J0-cLw">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
